# IoT-496-C-ML-Framework

./: .gitignore  README.md  Xgb_inference.py  check_nodes.py  dnn.py  fix_init.py  rf.py  xg_boost.py
C/iotids-runtime/: CMakeLists.txt  pico_sdk_import.cmake
C/iotids-runtime/model/: iotids_model.tflite.h
C/iotids-runtime/src/: main.c
C/iotids-runtime/src/federated/: flash_storage.c  flash_storage.h  weight_receiver.c  weight_receiver.h
C/iotids-runtime/src/inference/: arena.c  arena.h  model_runner.c  model_runner.h  tflm_resolver.cc  tflm_resolver.h
C/iotids-runtime/src/network/: tcp_client.h  wifi_init.c  wifi_init.h
C/iotids-runtime/src/preprocessing/: feature_scaler.h
C/iotids-runtime/src/utils/: debug_uart.h  ring_buffer.h
C/iotids-runtime/tests/: test_inference.c
C/src/network/: tcp_client.c
C/src/preprocessing/: feature_scaler.c
C/src/utils/: debug_uart.c  ring_buffer.c
C/tests/: test_scaler.c
Pico-runtime-library/: csv-to-c.py  rf-to-c-correct.py  sample_debug.py  server_csv.py  server_tcp.py  xg-to-c.py
Pico-runtime-library/Pico-rf-runtime/: CMakeLists.txt  Pico-rf-runtime.c  rf_model.h
Pico-runtime-library/Pico-xg-runtime/: CMakeLists.txt  Pico-xg-runtime.c  xgb_model.h  xgb_samples.h
models/iotids_rf/: iotids_rf_model.pkl  iotids_rf_scaler.pkl
processed_reduced/: feature_engineering_report.txt  feature_selection_summary.csv  feature_stats_full.csv  label_mapping.txt
python/core/: ops.py  tensor.py
python/data/: csv_reader.py
python/iotids/: __init__.py
python/iotids/boosting/: __init__.py  gradient_booster.py  node.py  serializer.py  tree.py  xgboost_classifier.py
python/iotids/core/: __init__.py  dtypes.py
python/iotids/data/: __init__.py  dataset.py  preprocessing.py
python/iotids/federated/: __init__.py  client.py  partition.py  server.py
python/iotids/forest/: __init__.py  decision_tree.py  random_forest.py  serializer.py
python/iotids/metrics/: __init__.py  classification.py
python/iotids/nn/: __init__.py  activations.py  layers.py  losses.py  model.py  optimizers.py
python/iotids/prune/: __init__.py  magnitude.py  mask.py  scheduler.py  structured.py
python/iotids/quantize/: __init__.py  calibration.py  quantizer.py  tflm_export.py
python/iotids/quantized/: __init__.py  calibration.py  quantizer.py  tflm_export.py
python/iotids/utils/: __init__.py  io.py  math.py
python/utils/: random.py
results/iotids_rf/: rf_results.json
